# FaceSwap

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  faceswap.py  install.bat  install.sh  pyproject.toml  requirements.txt  setup.py  test_installation.py
faceswap/: __init__.py
faceswap/models/: __init__.py  autoencoder.py  losses.py  trainer.py
faceswap/processing/: __init__.py  data_processor.py  face_detector.py  face_swapper.py  video_processor.py
faceswap/utils/: __init__.py  error_handler.py  file_manager.py  gpu_manager.py  logger.py  progress_tracker.py
sample_data/: README.md
sample_data/images/: README.md
sample_data/video/: README.md
