[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "faceswap-application"
version = "1.0.0"
authors = [
    {name = "FaceSwap Team", email = "contact@faceswap.dev"},
]
description = "A user-friendly deep learning based face swapping tool for videos"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
keywords = ["faceswap", "deepfake", "video", "processing", "machine-learning", "pytorch"]

dependencies = [
    "torch>=2.0.0,<2.2.0",
    "torchvision>=0.15.0,<0.17.0",
    "opencv-python>=4.8.0,<5.0.0",
    "Pillow>=10.0.0,<11.0.0",
    "mtcnn>=0.1.1",
    "face-alignment>=1.3.5",
    "tqdm>=4.65.0,<5.0.0",
    "ffmpeg-python>=0.2.0",
    "numpy>=1.24.0,<2.0.0",
    "scipy>=1.10.0",
    "albumentations>=1.3.0,<2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
gpu = [
    # GPU support is handled by PyTorch installation
]
visualization = [
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
]
monitoring = [
    "psutil>=5.9.0",
    "GPUtil>=1.4.0",
]

[project.scripts]
faceswap = "faceswap:main"

[project.urls]
Homepage = "https://github.com/faceswap/faceswap-application"
"Bug Reports" = "https://github.com/faceswap/faceswap-application/issues"
"Source Code" = "https://github.com/faceswap/faceswap-application"
Documentation = "https://github.com/faceswap/faceswap-application/blob/main/README.md"

[tool.setuptools]
packages = ["faceswap"]

[tool.setuptools.package-data]
faceswap = ["*.yaml", "*.yml", "*.json"]

# Development tools configuration
[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=faceswap --cov-report=html --cov-report=term-missing"